--- a/public/saved.html
+++ b/public/saved.html
@@ -14,18 +14,11 @@
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="/">News</a>
+            <a class="navbar-brand" href="/">BBC News</a>
         </div>
         <ul class="nav navbar-nav">
-            <li class="active">
-              <a href="/">Home</a>
-            </li>
-            <li>
-              <a href="/saved.html">Saved Articles</a>
-            </li>
-            <li>
-              <a class="btn btn-danger scrape-new">New Articles</a>
-            </li>
+            <li><a href="/">Home</a></li>
+            <li class="active"><a href="/saved.html">Saved Articles</a></li>
         </ul>
     </div>
 </nav>
@@ -35,8 +28,8 @@
     <div class="background-image">
     </div>
     <div class="caption">
-        <h1>BBC News</h1>
-        <p>Latest News from British Broadcasting Corporation (BBC)</p>
+        <h1>Saved Articles</h1>
+        <p>Your Saved Articles</p>
     </div>
 </div>
 <div class="container-fluid article-container">
@@ -44,14 +37,14 @@
 
 <footer class="footer">
     <div class="container">
-        <p>BBC News</p>
+        <p>Music News</p>
     </div>
 </footer>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/4.4.0/bootbox.min.js"></script>
-<script src="../../assets/javascript/index.js"></script>
+<script src="../../assets/javascript/saved.js"></script>
 
 </body>
 
