--- a/public/saved.html
+++ b/public/saved.html
@@ -37,7 +37,7 @@
 
 <footer class="footer">
     <div class="container">
-        <p>Music News</p>
+        <p>BBC News</p>
     </div>
 </footer>
 
